styles.css
@import url("https://fonts.googleapis.com/css2?family=Orbitron&display=swap");

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "Obitron", sans-serif;
}

/* Variables */
:root {
  /* Blacks */
  --main-black: #1b1b1b;
  --secondary-black: #242124;
  --third-black: #333333;
  --fourth-black: #2b2b2a;
  --text-color: rgb(115, 115, 115);
  /* Whites */

  /* Radius */
  --radius-border: 0.375rem;
}

body {
  background-color: var(--secondary-black);
}
/* Navigation */
nav {
  background-color: var(--main-black);
  width: 100%;
  height: 60px;
  padding: 8px;
  display: flex;
  justify-content: end;
}

.toggler {
  background-color: var(--third-black);
  border-radius: var(--radius-border);
  height: 100%;
  width: 100px;
  margin-right: 12px;
  box-shadow: rgba(77, 77, 78, 0.3) 0px 1px 2px 0px,
    rgba(0, 0, 0, 0.15) 0px 2px 6px 2px;
}

.container {
  width: 100%;
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
}

.main-container {
  background-color: var(--fourth-black);
  border-radius: var(--radius-border);
  width: 800px;
  height: 550px;
  padding: 1.125rem;
  display: grid;
  grid-template-columns: 2fr 1fr;
  column-gap: 20px;
}

/* Calculator */
.calculator {
  background-color: var(--third-black);
  border-radius: var(--radius-border);
  height: 100%;
  display: grid;
  row-gap: 10px;
  grid-template-rows: 1fr 4fr;
  padding: 1rem;
}

/* Calculator Screen */
.screen {
  background-color: var(--secondary-black);
  border-radius: var(--radius-border);
  height: 90px;
  display: flex;
  justify-content: end;
  align-items: end;
  font-size: 3.5rem;
  padding: 4px;
  box-shadow: rgba(51, 51, 52, 0.3) 0px 1px 2px 0px,
    rgba(0, 0, 0, 0.15) 0px 2px 6px 2px;
}

.screen-text {
  color: rgb(185, 185, 185);
  margin-right: 8px;
}

.screen-container {
  display: flex;
  flex-direction: column;
}

.prev {
  font-size: 1rem;
  opacity: 30%;
  text-align: right;
}

.active {
  opacity: 80%;
  font-size: 3rem;
}

/* Calculator Buttons */
button {
  border: none;
}

.buttons {
  background-color: var(--secondary-black);
  height: 100%;
  width: 100%;
  border-radius: var(--radius-border);
  display: grid;
  padding: 8px;
  grid-template-columns: repeat(4, 1fr);
  grid-template-rows: repeat(5, 1fr);
  gap: 10px;
}

.button {
  background-color: var(--third-black);
  border-radius: var(--radius-border);
  display: flex;
  justify-content: center;
  align-items: center;
  color: var(--text-color);
  font-size: 2rem;
  cursor: pointer;
  box-shadow: rgba(107, 108, 109, 0.3) 0px 1px 2px 0px,
    rgba(0, 0, 0, 0.15) 0px 2px 6px 2px;
}

.button:hover,
.history-clear:hover {
  background-color: rgb(125, 121, 121);
  color: var(--main-black);
  box-shadow: rgba(209, 211, 212, 0.3) 0px 1px 2px 0px,
    rgba(31, 31, 31, 0.15) 0px 1px 3px 1px;
}

.button:active,
.history-clear:active {
  box-shadow: rgb(86, 87, 88) 3px 3px 6px 0px inset,
    rgba(50, 50, 50, 0.5) -3px -3px 6px 1px inset;
}

.button-0 {
  grid-row: 5 / 6;
  grid-column: -5 / -3;
}

.button-dot {
  grid-row: 5 / 6;
  grid-column: -3 / -2;
}

.button-equals {
  grid-row: 4 / 6;
}

/* History */
.history-panel {
  background-color: var(--third-black);
  border-radius: var(--radius-border);
  display: grid;
  grid-template-rows: 1fr 9fr;
  row-gap: 10px;
  padding: 8px;
  box-shadow: rgba(107, 108, 109, 0.3) 0px 1px 2px 0px,
    rgba(0, 0, 0, 0.15) 0px 2px 6px 2px;
}

.history-settings {
  background-color: var(--secondary-black);
  border-radius: var(--radius-border);
  display: flex;
  justify-content: center;
  align-items: center;
  color: var(--text-color);
}

.history-main {
  background-color: var(--secondary-black);
  border-radius: var(--radius-border);
  display: flex;
  flex-direction: column;
  padding: 8px;
}

.history-clear {
  background-color: var(--third-black);
  border-radius: var(--radius-border);
  color: var(--text-color);
  width: 100px;
  align-self: self-end;
  padding: var(--radius-border);
}

.history-display {
  display: flex;
  background-color: var(--secondary-black);
  border-radius: var(--radius-border);
  flex-direction: column;
  align-items: end;
  height: 100%;
  margin-top: 3px;
  padding: 8px;
  border-radius: var(--radius-border);
}

/* Mix */
.history-clear,
.main-container,
.calculator,
.buttons,
.screen,
.history-panel,
.history-settings {
  box-shadow: rgba(51, 51, 52, 0.3) 0px 1px 2px 0px,
    rgba(0, 0, 0, 0.15) 0px 2px 6px 2px;
}

/* Footer */
footer {
  background-color: var(--main-black);
  width: 100%;
  height: 45px;
}

